--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 click==8.1.7
 joblib==1.4.2
 nltk==3.8.1
+numpy==2.0.1
+opencv-python==4.10.0.84
 packaging==24.1
 pillow==10.4.0
 pytesseract==0.3.10
